--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -791,16 +791,16 @@ error.any = Unknown network error.
 error.bloom = Failed to initialize bloom.\nYour device may not support it.
 error.moddex = Mindustry is unable to load this mod.\nYour device is blocking import of Java mods due to recent changes in Android.\nThis will not be fixed. There is no known workaround for this issue.
 
-weather.rain.name = Rain
-weather.snowing.name = Snow
-weather.sandstorm.name = Sandstorm
-weather.sporestorm.name = Sporestorm
-weather.fog.name = Fog
+weather.rain.name =rahin
+weather.snowing.name = kinasaiva
+weather.sandstorm.name = darezatsévyé
+weather.sporestorm.name = TashkkenTyévyétsú
+weather.fog.name = darekatsævyē
 
-campaign.playtime = \uF129 [lightgray]Sector Playtime: {0}
-campaign.complete = [accent]Congratulations.\n\nThe enemy on {0} has been defeated.\n[lightgray]The final sector has been conquered.
+campaign.playtime = \uF129 [lightgray] Sutsúká dareka: {0}
+campaign.complete = [accent]Congratulations.\n\nyezarvaktyévté {0} yaizarvatsyé dabroshyet hyetatsukaikatsuké.\n[lightgray]yaizarryé hidrasatsvyésú darzakatsyé
 
-sectorlist = Sectors
+sectorlist = Sutsúká
 sectorlist.attacked = {0} yuzukatsú
 sectors.unexplored = [lightgray]datsúká
 sectors.attempts = káizátsúká:
@@ -1540,40 +1540,40 @@ content.team.name = Factions
 
 wallore = (Wall)
 
-item.copper.name = Copper
-item.lead.name = Lead
-item.coal.name = Coal
-item.graphite.name = Graphite
-item.titanium.name = Titanium
-item.thorium.name = Thorium
-item.silicon.name = Silicon
-item.plastanium.name = Plastanium
-item.phase-fabric.name = Phase Fabric
-item.surge-alloy.name = Surge Alloy
-item.spore-pod.name = Spore Pod
-item.sand.name = Sand
-item.blast-compound.name = Blast Compound
-item.pyratite.name = Pyratite
-item.metaglass.name = Metaglass
-item.scrap.name = Scrap
-item.fissile-matter.name = Fissile Matter
-item.beryllium.name = Beryllium
-item.tungsten.name = Tungsten
-item.oxide.name = Oxide
-item.carbide.name = Carbide
-item.dormant-cyst.name = Dormant Cyst
+item.copper.name = kaiju
+item.lead.name = LOSINOL kaidrazaiva
+item.coal.name = jizúi
+item.graphite.name = gínosotsyō
+item.titanium.name = Tyézorva
+item.thorium.name = yanizorva
+item.silicon.name = kaizazorva
+item.plastanium.name = kinasatsavékazorva
+item.phase-fabric.name = kitotsúké darezarvakyévyétsúnakavyétsukákázārkatsévyétsúkatsakinozørvokosútsāvyētsú
+item.surge-alloy.name = yaizorvatyé
+item.spore-pod.name = yanísetsayé
+item.sand.name = saizorvyé
+item.blast-compound.name = baliatka sarézatsavyé
+item.pyratite.name = fizorvyé
+item.metaglass.name = yanasatsavyé
+item.scrap.name = YAIZAAAAAA
+item.fissile-matter.name = Kinosotsovyé
+item.beryllium.name = Byéryélyé
+item.tungsten.name = Taihiyutsú
+item.oxide.name = jizudesúné
+item.carbide.name = Carbadaidé
+item.dormant-cyst.name = dahiroko sikotoshkkovyé
 
-liquid.water.name = Water
-liquid.slag.name = Slag
-liquid.oil.name = Oil
-liquid.cryofluid.name = Cryofluid
-liquid.neoplasm.name = Neoplasm
-liquid.arkycite.name = Arkycite
-liquid.gallium.name = Gallium
-liquid.ozone.name = Ozone
-liquid.hydrogen.name = Hydrogen
-liquid.nitrogen.name = Nitrogen
-liquid.cyanogen.name = Cyanogen
+liquid.water.name = takeda
+liquid.slag.name = yanizaiva
+liquid.oil.name = haidresakitashkavyé
+liquid.cryofluid.name = izoko
+liquid.neoplasm.name = Neoplasiaki 
+liquid.arkycite.name = Arkyaliteyé
+liquid.gallium.name = gizokoshtavyé
+liquid.ozone.name = aizér
+liquid.hydrogen.name = Hínosotsovyé
+liquid.nitrogen.name = Nîtrokorvyé
+liquid.cyanogen.name = Cyayanokogen 
 
 unit.dagger.name = Dagger
 unit.mace.name = Mace
