--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -26,13 +26,13 @@ highscore = [accent]New highscore!
 copied = Copied.
 indev.notready = This part of the game isn't ready yet
 
-load.sound = Sounds
-load.map = Maps
-load.image = Images
-load.content = Content
-load.system = System
-load.mod = Mods
-load.scripts = Scripts
+load.sound = sāízorkyétutsú
+load.map = Mízoka
+load.image = haídreka
+load.content = kendakkedakdakt
+load.system = syoizoi
+load.mod = Maízoryétutsúka
+load.scripts = skāindér
 
 be.update = A new Bleeding Edge build is available:
 be.update.confirm = Download it and restart now?
@@ -41,7 +41,7 @@ be.ignore = Ignore
 be.noupdates = No updates found.
 be.check = Check for updates
 
-mods.browser = Mod Browser
+mods.browser = kizorza Tashkkentya
 mods.browser.selected = Selected mod
 mods.browser.add = Install
 mods.browser.reinstall = Reinstall
@@ -99,14 +99,14 @@ level.select = Level Select
 level.mode = Gamemode:
 coreattack = < Core is under attack! >
 nearpoint = [[ [scarlet]LEAVE DROP POINT IMMEDIATELY[] ]\nannihilation imminent
-database = Core Database
-database.button = Database
+database = kizovítsú
+database.button = Dyézova
 viewfields = View Content Fields
-savegame = Save Game
-loadgame = Load Game
-joingame = Join Game
-customgame = Custom Game
-newgame = New Game
+savegame = Sāíkér karka
+loadgame = kitotsú karka
+joingame = jívorka karka
+customgame = saizorvyé kendakkedakdakt 
+newgame = haidrekav karka
 none = <none>
 none.found = [lightgray]<none found>
 none.inmap = [lightgray]<none in map>
@@ -114,10 +114,10 @@ minimap = Minimap
 position = Position
 close = Close
 website = Website
-quit = Quit
+quit = kizoko
 save.quit = Save & Quit
-maps = Maps
-maps.browse = Browse Maps
+maps = haidre saki Tashkkenta
+maps.browse = haidre zivoko
 continue = Continue
 maps.none = [lightgray]No maps found!
 invalid = Invalid
@@ -212,12 +212,12 @@ campaign.erekir = Newer, more polished content. Mostly linear campaign progressi
 campaign.serpulo = Older content; the classic experience. More open-ended, more content.\n\nPotentially unbalanced maps and campaign mechanics. Less polished.
 campaign.difficulty = Difficulty
 completed = [accent]Researched
-techtree = Tech Tree
+techtree = Tahizoko
 techtree.select = Tech Tree Selection
-techtree.serpulo = Serpulo
-techtree.erekir = Erekir
-research.load = Load
-research.discard = Discard
+techtree.serpulo = surplasiaki 
+techtree.erekir = malis :3
+research.load = Lizo
+research.discard = dizo
 research.list = [lightgray]Research:
 research = Research
 researched = [lightgray]{0} researched.
